--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
           <li class="abiliy__item">Udemy 線上課程</li>
           <li class="abiliy__item">Gjun 巨匠電腦</li>
           <li class="abiliy__item">關注 Youtube 前端開發相關頻道 <span class="small">Traversy Media, DarkCode...</span></li>
+          <li class="abiliy__item">在<a href="https://hackmd.io/s/SyWqgjZpE" class="abiliy__link">hackmd</a>撰寫javascript筆記(持續更新)</li>
         </ul>
 
       </div>
