--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <li class="abiliy__item abiliy__item--none"> <h5 class="heading-5">基本</h5> </li>
           <li class="abiliy__item">熟稔 JavaScript ES5/ES6 語法、物件</li>
           <li class="abiliy__item">作用範圍(Scope)、閉包設計(Closure)、this 關鍵字</li>
-          <li class="abiliy__item">建構子(Constructor)、原型(Prototype)、類別(Class)</li>
+          <li class="abiliy__item">建構子(Constructor)、原型(Prototype)、類別(Class語法糖)</li>
           <li class="abiliy__item">DOM 操作與事件監聽處理</li>
           <li class="abiliy__item abiliy__item--none"> <h5 class="heading-5">實務</h5> </li>
           <li class="abiliy__item">模組系統 (import, export)</li>
